[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.3",
    "langgraph-api>=0.2.89",
    "langgraph-cli>=0.3.4",
    "langsmith>=0.4.6",
    "uuid>=1.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.pyright]
venvPath = "."
venv = ".venv"
